@@ -1,6 +1,6 @@
 package de.zib.gndms.logic.model.gorfx;
 
-import de.zib.gndms.model.common.types.factory.AbstractRecursiveKeyFactory;
+import de.zib.gndms.model.common.types.factory.InjectingRecursiveKeyFactory;
 import de.zib.gndms.model.gorfx.OfferType;
 
 
@@ -12,10 +12,14 @@ import de.zib.gndms.model.gorfx.OfferType;
  *
  *          User: stepn Date: 09.10.2008 Time: 12:50:48
  */
-public class FileTransferActionFactory extends AbstractRecursiveKeyFactory<OfferType, ORQTaskAction<?>> {
+public class FileTransferActionFactory
+	  extends InjectingRecursiveKeyFactory<OfferType, ORQTaskAction<?>> {
+
     @Override
     public ORQTaskAction<?> newInstance(final OfferType keyParam)
             throws IllegalAccessException, InstantiationException, ClassNotFoundException {
-        return new FileTransferTaskAction();
+	    final FileTransferTaskAction taskAction = new FileTransferTaskAction();
+	    injectMembers(taskAction);
+	    return taskAction;
     }
 }
