@@ -1,6 +1,6 @@
 package de.zib.gndms.logic.model.gorfx;
 
-import de.zib.gndms.model.common.types.factory.AbstractRecursiveKeyFactory;
+import de.zib.gndms.model.common.types.factory.InjectingRecursiveKeyFactory;
 import de.zib.gndms.model.gorfx.OfferType;
 
 
@@ -12,10 +12,12 @@ import de.zib.gndms.model.gorfx.OfferType;
  *
  *          User: stepn Date: 09.10.2008 Time: 12:49:54
  */
-public class FileTransferORQFactory extends AbstractRecursiveKeyFactory<OfferType, AbstractORQCalculator<?,?>> {
+public class FileTransferORQFactory extends InjectingRecursiveKeyFactory<OfferType, AbstractORQCalculator<?,?>> {
     @Override
     public AbstractORQCalculator<?, ?> newInstance(final OfferType keyParam)
             throws IllegalAccessException, InstantiationException, ClassNotFoundException {
-        return new FileTransferORQCalculator();
+	    final FileTransferORQCalculator orqCalculator = new FileTransferORQCalculator();
+	    injectMembers(orqCalculator);
+	    return orqCalculator;
     }
 }
