@@ -45,10 +45,15 @@
     <property name="env.HOSTNAME" value="${env.COMPUTERNAME}"/>
 
     <tstamp>
-        <format property="build.time" pattern="MM/dd/yyyy hh:mm aa" />
+        <format property="build.time" pattern="yyyy-MM-dd'T'HH:mm:ssZ" />
     </tstamp>
 
     <echo message="${build.time} ${user.name}@${env.HOSTNAME}" file="${basedir}/gndms-shared-model/production/META-INF/GNDMS-BUILD-INFO" />
+
+    <loadfile srcfile="${basedir}/gndms-shared-model/production/META-INF/GNDMS-RELEASE" property="env.RELEASE" />
+
+    <echo message="GNDMS RELEASE: ${env.RELEASE}" />
+    <echo message="GNDMS BUILD: ${build.time} ${user.name}@${env.HOSTNAME}"/>
 
     <mkdir dir="gndms-shared-model/production/META-INF" />
     
