@@ -1,8 +1,8 @@
 package de.zib.gndms.GORFX.action;
 
-import de.zib.gndms.model.gorfx.OfferType;
 import de.zib.gndms.logic.model.gorfx.ORQTaskAction;
-import de.zib.gndms.model.common.types.factory.AbstractRecursiveKeyFactory;
+import de.zib.gndms.model.common.types.factory.InjectingRecursiveKeyFactory;
+import de.zib.gndms.model.gorfx.OfferType;
 
 
 /**
@@ -11,11 +11,14 @@ import de.zib.gndms.model.common.types.factory.AbstractRecursiveKeyFactory;
  * <p/>
  * User: mjorra, Date: 04.11.2008, Time: 17:44:10
  */
-public class RePublishSliceActionFactory  extends AbstractRecursiveKeyFactory<OfferType, ORQTaskAction<?>> {
+public class RePublishSliceActionFactory
+	  extends InjectingRecursiveKeyFactory<OfferType, ORQTaskAction<?>> {
     @Override
     public ORQTaskAction<?> newInstance(final OfferType keyParam)
             throws IllegalAccessException, InstantiationException, ClassNotFoundException {
-        return new RePublishSliceTaskAction();
+	    final RePublishSliceTaskAction action = new RePublishSliceTaskAction();
+	    injectMembers(action);
+	    return action;
     }
 
 }
