@@ -1,8 +1,9 @@
 package de.zib.gndms.GORFX.action;
 
 import de.zib.gndms.logic.model.gorfx.AbstractORQCalculator;
+import de.zib.gndms.model.common.types.factory.InjectingRecursiveKeyFactory;
 import de.zib.gndms.model.gorfx.OfferType;
-import de.zib.gndms.model.common.types.factory.AbstractRecursiveKeyFactory;
+
 
 /**
  * @author: Maik Jorra <jorra@zib.de>
@@ -10,11 +11,14 @@ import de.zib.gndms.model.common.types.factory.AbstractRecursiveKeyFactory;
  * <p/>
  * User: mjorra, Date: 04.11.2008, Time: 17:37:55
  */
-public class StagedTransferORQFactory extends AbstractRecursiveKeyFactory<OfferType, AbstractORQCalculator<?,?>> {
+public class StagedTransferORQFactory
+	  extends InjectingRecursiveKeyFactory<OfferType, AbstractORQCalculator<?,?>> {
 
     @Override
     public AbstractORQCalculator<?, ?> newInstance(final OfferType keyParam)
             throws IllegalAccessException, InstantiationException, ClassNotFoundException {
-        return new StagedTransferORQCalculator();
+	    final StagedTransferORQCalculator orqCalculator = new StagedTransferORQCalculator();
+	    injectMembers(orqCalculator);
+	    return orqCalculator;
     }
 }
