@@ -1,10 +1,11 @@
 package de.zib.gndms.GORFX.action.dms;
 
-import de.zib.gndms.logic.model.gorfx.AbstractORQCalculator;
-import de.zib.gndms.model.gorfx.OfferType;
-import de.zib.gndms.model.common.types.factory.AbstractRecursiveKeyFactory;
-import de.zib.gndms.infra.system.SystemHolder;
+import com.google.inject.Inject;
 import de.zib.gndms.infra.system.GNDMSystem;
+import de.zib.gndms.infra.system.SystemHolder;
+import de.zib.gndms.logic.model.gorfx.AbstractORQCalculator;
+import de.zib.gndms.model.common.types.factory.InjectingRecursiveKeyFactory;
+import de.zib.gndms.model.gorfx.OfferType;
 import org.jetbrains.annotations.NotNull;
 
 
@@ -14,7 +15,8 @@ import org.jetbrains.annotations.NotNull;
  * <p/>
  * User: mjorra, Date: 04.11.2008, Time: 17:37:55
  */
-public class SliceStageInORQFactory extends AbstractRecursiveKeyFactory<OfferType, AbstractORQCalculator<?,?>>
+public class SliceStageInORQFactory
+	  extends InjectingRecursiveKeyFactory<OfferType, AbstractORQCalculator<?,?>>
 	implements SystemHolder {
 
 	private GNDMSystem system;
@@ -26,6 +28,7 @@ public class SliceStageInORQFactory extends AbstractRecursiveKeyFactory<OfferTyp
 	}
 
 
+	@Inject
 	public void setSystem(@NotNull final GNDMSystem systemParam) {
 		system = systemParam;
 	}
@@ -36,7 +39,7 @@ public class SliceStageInORQFactory extends AbstractRecursiveKeyFactory<OfferTyp
     public AbstractORQCalculator<?, ?> newInstance(final OfferType keyParam)
             throws IllegalAccessException, InstantiationException, ClassNotFoundException {
 	    final SliceStageInORQCalculator orqCalculator = new SliceStageInORQCalculator();
-	    orqCalculator.setSystem(getSystem());
+	    injectMembers(orqCalculator);
 	    return orqCalculator;
     }
 }
